--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/loja_virtual_mentoria?autoreconnect=true
 spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
